--- a/index.html
+++ b/index.html
@@ -142,6 +142,13 @@
         gtag('config', 'AW-17517142887');
     </script>
 
+    <!-- Google Fonts -->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link
+        href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300..800;1,300..800&family=Outfit:wght@100..900&display=swap"
+        rel="stylesheet">
+
 </head>
 
 <body>
@@ -202,12 +209,16 @@
                                 </div>
                                 <div class="d-flex justify-content-end align-items-center w-100 gap-4">
                                     <div class="d-flex justify-content-center align-items-start flex-column">
-                                        <p class="m-0">MAIL</p>
-                                        <a href="mailto:contact@playabacusindia.com">contact@playabacusindia.com</a>
-                                    </div>|
+                                        <p class="m-0 text-secondary fw-bold" style="font-size: 0.8rem;"><i
+                                                class="fa-solid fa-envelope me-2 text-gradient"></i>Mail Us</p>
+                                        <a href="mailto:contact@playabacusindia.com"
+                                            class="fw-bold text-dark">contact@playabacusindia.com</a>
+                                    </div>
+                                    <div class="vr mx-2"></div>
                                     <div class="d-flex justify-content-center align-items-start flex-column">
-                                        <p class="m-0">CAll</p>
-                                        <a href="tel:919940416989">+91 99404 16989</a>
+                                        <p class="m-0 text-secondary fw-bold" style="font-size: 0.8rem;"><i
+                                                class="fa-solid fa-phone-volume me-2 text-gradient"></i>Call Us</p>
+                                        <a href="tel:919940416989" class="fw-bold text-dark">+91 99404 16989</a>
                                     </div>
                                 </div>
                             </div>
@@ -234,15 +245,17 @@
                         <ul
                             class="navbar-nav justify-content-start align-items-start align-items-md-start align-items-lg-center flex-grow-1 gap-2 gap-md-2 gap-lg-5">
                             <li class="nav-item">
-                                <a class="nav-link active" aria-current="page" href="index.html">Home</a>
+                                <a class="nav-link active" aria-current="page" href="index.html"><i
+                                        class="fa-solid fa-house me-1"></i> Home</a>
                             </li><span class="nav-line"></span>
                             <li class="nav-item">
-                                <a class="nav-link" href="about-us.html">About US</a>
+                                <a class="nav-link" href="about-us.html"><i class="fa-solid fa-user-group me-1"></i>
+                                    About Us</a>
                             </li><span class="nav-line"></span>
                             <div class="dropdown">
                                 <button class="btn dropdown-toggle drop-box" type="button" data-bs-toggle="dropdown"
                                     aria-expanded="false">
-                                    Our Courses
+                                    <i class="fa-solid fa-book-open me-1"></i> Our Courses
                                 </button>
                                 <ul class="dropdown-menu">
                                     <li><a class="dropdown-item" href="our-courses/abacus.html">Abacus</a>
@@ -270,11 +283,12 @@
                             </div>
                             <span class="nav-line"></span>
                             <li class="nav-item">
-                                <a class="nav-link" href="gallery.html">Gallery</a>
+                                <a class="nav-link" href="gallery.html"><i class="fa-solid fa-images me-1"></i>
+                                    Gallery</a>
                             </li><span class="nav-line"></span>
                             <li class="nav-item">
-                                <a class="nav-link" href="contact-us.html">Contact
-                                    US</a>
+                                <a class="nav-link" href="contact-us.html"><i class="fa-solid fa-phone me-1"></i>
+                                    Contact Us</a>
                             </li>
                         </ul>
                         <a class="d-flex d-md-flex d-lg-none mt-4 text-white justify-content-start align-items-center gap-2 franchise-btn"
