--- a/about-us.html
+++ b/about-us.html
@@ -106,6 +106,9 @@
     <noscript>
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css">
     </noscript>
+
+    <!-- Bootstrap Icons -->
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
     <!-- form -->
     <link rel="stylesheet" href="form/biz-msg-box/style.css">
     <!-- custom css -->
@@ -130,20 +133,20 @@
             src="https://www.facebook.com/tr?id=4105191913057058&ev=PageView&noscript=1" /></noscript>
     <!-- End Meta Pixel Code -->
     <!-- Google tag (gtag.js) -->
-<script async src="https://www.googletagmanager.com/gtag/js?id=AW-17517142887"></script>
-<script>
-  window.dataLayer = window.dataLayer || [];
-  function gtag(){dataLayer.push(arguments);}
-  gtag('js', new Date());
+    <script async src="https://www.googletagmanager.com/gtag/js?id=AW-17517142887"></script>
+    <script>
+        window.dataLayer = window.dataLayer || [];
+        function gtag() { dataLayer.push(arguments); }
+        gtag('js', new Date());
 
-  gtag('config', 'AW-17517142887');
-</script>
+        gtag('config', 'AW-17517142887');
+    </script>
 
 </head>
 
 <body>
     <header id="header">
-        <nav class="navbar fixed-top navbar-expand-lg d-block py-0">
+        <nav class="navbar fixed-top navbar-expand-xl d-block py-0">
             <div id="top-bar" class="container-fluid">
                 <div class="container">
                     <div class="row">
@@ -151,16 +154,17 @@
                             <div class="d-flex justify-content-start align-items-center w-100 h-100">
                                 <div class="d-flex justify-content-center align-items-center gap-4 ms-3 social-icon">
                                     <a href="https://www.facebook.com/idealplayabacusindiapvtltd/"><i
-                                            class="fa-brands fa-square-facebook"></i></a>
+                                            class="bi bi-facebook"></i></a>
                                     <a href="https://www.instagram.com/ideal_play_abacus_india/"><i
-                                            class="fa-brands fa-square-instagram"></i></a>
-                                    <a href="https://x.com/PlayAbacus"><i class="fa-brands fa-square-x-twitter"></i></a>
-                                    <a href="https://wa.me/919940416989?text=Hi%20Ideal%20Play%20Abacus%2C%20I%20need%20more%20details
-"><i class="fa-brands fa-square-whatsapp"></i></a>
+                                            class="bi bi-instagram"></i></a>
+                                    <a href="https://x.com/PlayAbacus"><i class="bi bi-twitter-x"></i></a>
+                                    <a
+                                        href="https://wa.me/919940416989?text=Hi%20Ideal%20Play%20Abacus%2C%20I%20need%20more%20details"><i
+                                            class="bi bi-whatsapp"></i></a>
                                     <a href="https://www.youtube.com/channel/UCot9VJkz3JArME500R00FVQ"><i
-                                            class="fa-brands fa-square-youtube"></i></a>
+                                            class="bi bi-youtube"></i></a>
                                     <a href="https://www.linkedin.com/company/ideal-play-abacus-india-pvt-ltd"><i
-                                            class="fa-brands fa-linkedin"></i></a>
+                                            class="bi bi-linkedin"></i></a>
                                 </div>
                             </div>
                         </div>
@@ -193,7 +197,8 @@
                             <div class="d-flex justify-content-between align-items-center w-100">
                                 <div
                                     class="d-flex justify-content-center justify-content-md-start justify-content-lg-start align-items-center w-100">
-                                    <img class="w-50" src="https://www.playabacusindia.com/images/logo.jpg" alt="Abacus class and Franchises">
+                                    <img class="w-50" src="https://www.playabacusindia.com/images/logo.jpg"
+                                        alt="Abacus class and Franchises">
                                 </div>
                                 <div class="d-flex justify-content-end align-items-center w-100 gap-4">
                                     <div class="d-flex justify-content-center align-items-start flex-column">
@@ -211,8 +216,9 @@
                 </div>
             </div>
             <div class="container py-2">
-                <div class="d-flex d-md-flex d-lg-none justify-content-between align-items-center w-100 p-3">
-                    <img class="w-75" src="https://www.playabacusindia.com/images/logo.jpg" alt="Abacus class and Franchises">
+                <div class="d-flex d-md-flex d-xl-none justify-content-between align-items-center w-100 p-3">
+                    <img class="w-75" src="https://www.playabacusindia.com/images/logo.jpg"
+                        alt="Abacus class and Franchises">
                     <button class="navbar-toggler" type="button" data-bs-toggle="offcanvas"
                         data-bs-target="#offcanvasNavbar" aria-controls="offcanvasNavbar"
                         aria-label="Toggle navigation">
@@ -254,7 +260,8 @@
                                             href="https://www.playabacusindia.com/our-courses/creative-arts-india.html">Creative
                                             Art India</a></li>
                                     <li><a class="dropdown-item"
-                                            href="https://www.playabacusindia.com/our-courses/phonics-star.html">Phonics Star</a>
+                                            href="https://www.playabacusindia.com/our-courses/phonics-star.html">Phonics
+                                            Star</a>
                                     </li>
                                     <li><a class="dropdown-item"
                                             href="https://www.playabacusindia.com/our-courses/handwriting.html">Handwriting</a>
@@ -287,7 +294,7 @@
                                 class="fa-solid fa-exclamation fa-bounce text-warning"></i>
                         </a>
                         <div
-                            class="d-flex d-md-flex d-lg-none justify-content-center align-items-start flex-column w-100 gap-4 my-5">
+                            class="d-flex d-md-flex d-xl-none justify-content-center align-items-start flex-column w-100 gap-4 my-5">
                             <div class="d-flex justify-content-center align-items-start flex-column text-white">
                                 <p class="m-0">MAIL</p>
                                 <a href="mailto:contact@playabacusindia.com"
@@ -298,21 +305,21 @@
                                 <a href="tel:919940416989" class="text-white">+91 99404 16989</a>
                             </div>
                         </div>
-                        <div class="d-flex d-md-flex d-lg-none align-items-start w-100 h-100 flex-column ">
+                        <div class="d-flex d-md-flex d-xl-none align-items-start w-100 h-100 flex-column ">
                             <h3 class="text-white">Follow Us</h3>
                             <div class="d-flex justify-content-center align-items-center gap-4 social-icon">
                                 <a href="https://www.facebook.com/idealplayabacusindiapvtltd/"><i
-                                        class="fa-brands fa-square-facebook"></i></a>
+                                        class="bi bi-facebook"></i></a>
                                 <a href="https://www.instagram.com/ideal_play_abacus_india/"><i
-                                        class="fa-brands fa-square-instagram"></i></a>
-                                <a href="https://x.com/PlayAbacus"><i class="fa-brands fa-square-x-twitter"></i></a>
+                                        class="bi bi-instagram"></i></a>
+                                <a href="https://x.com/PlayAbacus"><i class="bi bi-twitter-x"></i></a>
                                 <a
                                     href="https://wa.me/919940416989?text=Hi%20Ideal%20Play%20Abacus%2C%20I%20need%20more%20details"><i
-                                        class="fa-brands fa-square-whatsapp"></i></a>
+                                        class="bi bi-whatsapp"></i></a>
                                 <a href="https://www.youtube.com/channel/UCot9VJkz3JArME500R00FVQ"><i
-                                        class="fa-brands fa-square-youtube"></i></a>
+                                        class="bi bi-youtube"></i></a>
                                 <a href="https://www.linkedin.com/company/ideal-play-abacus-india-pvt-ltd"><i
-                                        class="fa-brands fa-linkedin"></i></a>
+                                        class="bi bi-linkedin"></i></a>
                             </div>
                         </div>
                     </div>
@@ -372,7 +379,8 @@
                         </div>
                     </div>
                     <div class="col-6 col-md-6 col-lg-3">
-                        <div class="d-flex justify-content-start justify-content-md-start justify-content-lg-center align-items-center w-100 info-box-new gap-3">
+                        <div
+                            class="d-flex justify-content-start justify-content-md-start justify-content-lg-center align-items-center w-100 info-box-new gap-3">
                             <div class="d-flex justify-content-center align-items-center info-box-icon">
                                 <i class="fa-solid fa-graduation-cap"></i>
                             </div>
@@ -383,7 +391,8 @@
                         </div>
                     </div>
                     <div class="col-6 col-md-6 col-lg-3">
-                        <div class="d-flex justify-content-start justify-content-md-start justify-content-lg-center align-items-center w-100 info-box-new gap-3">
+                        <div
+                            class="d-flex justify-content-start justify-content-md-start justify-content-lg-center align-items-center w-100 info-box-new gap-3">
                             <div class="d-flex justify-content-center align-items-center info-box-icon">
                                 <i class="fa-solid fa-trophy"></i>
                             </div>
@@ -394,7 +403,8 @@
                         </div>
                     </div>
                     <div class="col-6 col-md-6 col-lg-3">
-                        <div class="d-flex justify-content-start justify-content-md-start justify-content-lg-end align-items-center w-100 info-box-new gap-3">
+                        <div
+                            class="d-flex justify-content-start justify-content-md-start justify-content-lg-end align-items-center w-100 info-box-new gap-3">
                             <div class="d-flex justify-content-center align-items-center info-box-icon">
                                 <i class="fa-solid fa-gem"></i>
                             </div>
@@ -519,7 +529,8 @@
                         <div
                             class="d-flex justify-content-center align-items-center w-100 rounded p-3 shadow bg-primary-clr">
                             <img class="w-100 rounded"
-                                src="https://www.playabacusindia.com/images/about-us/kid-with-abacus.jpeg" alt="Abacus class and Franchises">
+                                src="https://www.playabacusindia.com/images/about-us/kid-with-abacus.jpeg"
+                                alt="Abacus class and Franchises">
                         </div>
                     </div>
                 </div>
@@ -714,7 +725,8 @@
                                 Kids</a>
                             <a href="https://www.playabacusindia.com/our-courses/creative-arts-india.html"
                                 class="fot-a">Creative Art India</a>
-                            <a href="https://www.playabacusindia.com/our-courses/phonics-star.html" class="fot-a">Phonics
+                            <a href="https://www.playabacusindia.com/our-courses/phonics-star.html"
+                                class="fot-a">Phonics
                                 Spark</a>
                             <a href="https://www.playabacusindia.com/our-courses/handwriting.html"
                                 class="fot-a">Handwriting</a>
@@ -797,23 +809,25 @@
 
                         </div>
                         <div class="d-flex justify-content-start me-auto align-items-center gap-2 imporatnt-links">
-                            <a href="https://www.playabacusindia.com/terms-and-conditions.html" class="fot-a">Terms & conditions</a> |
-                            <a href="https://www.playabacusindia.com/copyright-policy.html" class="fot-a">Copyright Policy</a>
+                            <a href="https://www.playabacusindia.com/terms-and-conditions.html" class="fot-a">Terms &
+                                conditions</a> |
+                            <a href="https://www.playabacusindia.com/copyright-policy.html" class="fot-a">Copyright
+                                Policy</a>
                         </div>
                         <div class="d-flex justify-content-start align-items-center w-100 gap-4 social-icon">
                             <h6 class="m-0">Follow US:</h6>
                             <a href="https://www.facebook.com/idealplayabacusindiapvtltd/"><i
-                                    class="fa-brands fa-square-facebook"></i></a>
+                                    class="bi bi-facebook"></i></a>
                             <a href="https://www.instagram.com/ideal_play_abacus_india/"><i
-                                    class="fa-brands fa-square-instagram"></i></a>
-                            <a href="https://x.com/PlayAbacus"><i class="fa-brands fa-square-x-twitter"></i></a>
+                                    class="bi bi-instagram"></i></a>
+                            <a href="https://x.com/PlayAbacus"><i class="bi bi-twitter-x"></i></a>
                             <a
                                 href="https://wa.me/919940416989?text=Hi%20Ideal%20Play%20Abacus%2C%20I%20need%20more%20details"><i
-                                    class="fa-brands fa-square-whatsapp"></i></a>
+                                    class="bi bi-whatsapp"></i></a>
                             <a href="https://www.youtube.com/channel/UCot9VJkz3JArME500R00FVQ"><i
-                                    class="fa-brands fa-square-youtube"></i></a>
+                                    class="bi bi-youtube"></i></a>
                             <a href="https://www.linkedin.com/company/ideal-play-abacus-india-pvt-ltd"><i
-                                    class="fa-brands fa-linkedin"></i></a>
+                                    class="bi bi-linkedin"></i></a>
                         </div>
                     </div>
                 </div>
@@ -839,7 +853,8 @@
                 <div class="row">
                     <div class="col-12">
                         <div class="d-flex justify-content-center align-items-center w-100 text-center">
-                            <p class="m-0">© <span id="year"></span> Ideal Play Abacus India Pvt. Ltd. All rights reserved.</p>
+                            <p class="m-0">© <span id="year"></span> Ideal Play Abacus India Pvt. Ltd. All rights
+                                reserved.</p>
                         </div>
                     </div>
                 </div>
@@ -944,7 +959,8 @@
     <!-- form -->
     <div id="tele-chatbox-unique">
         <div class="tele-chatbox-header ">
-            <img style="border-radius: 10px;" class="h-50" src="https://www.playabacusindia.com/images/logo.jpg" alt="IPA">
+            <img style="border-radius: 10px;" class="h-50" src="https://www.playabacusindia.com/images/logo.jpg"
+                alt="IPA">
             <div onclick="msgBox()" id="tele-close"><svg xmlns="http://www.w3.org/2000/svg" width="1em" height="1em"
                     viewBox="0 0 24 24">
                     <path fill="currentColor"
