--- a/index.html
+++ b/index.html
@@ -118,6 +118,9 @@
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css">
     </noscript>
 
+    <!-- Bootstrap Icons -->
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
+
     <!-- Form -->
     <link rel="stylesheet" href="form/biz-msg-box/style.css">
 
@@ -153,7 +156,7 @@
 
 <body>
     <header id="header">
-        <nav class="navbar fixed-top navbar-expand-lg d-block py-0">
+        <nav class="navbar fixed-top navbar-expand-xl d-block py-0">
             <div id="top-bar" class="container-fluid">
                 <div class="container">
                     <div class="row">
@@ -161,17 +164,17 @@
                             <div class="d-flex justify-content-start align-items-center w-100 h-100">
                                 <div class="d-flex justify-content-center align-items-center gap-4 ms-3 social-icon">
                                     <a href="https://www.facebook.com/idealplayabacusindiapvtltd/"><i
-                                            class="fa-brands fa-square-facebook"></i></a>
+                                            class="bi bi-facebook"></i></a>
                                     <a href="https://www.instagram.com/ideal_play_abacus_india/"><i
-                                            class="fa-brands fa-square-instagram"></i></a>
-                                    <a href="https://x.com/PlayAbacus"><i class="fa-brands fa-square-x-twitter"></i></a>
+                                            class="bi bi-instagram"></i></a>
+                                    <a href="https://x.com/PlayAbacus"><i class="bi bi-twitter-x"></i></a>
                                     <a
                                         href="https://wa.me/919940416989?text=Hi%20Ideal%20Play%20Abacus%2C%20I%20need%20more%20details"><i
-                                            class="fa-brands fa-square-whatsapp"></i></a>
+                                            class="bi bi-whatsapp"></i></a>
                                     <a href="https://www.youtube.com/channel/UCot9VJkz3JArME500R00FVQ"><i
-                                            class="fa-brands fa-square-youtube"></i></a>
+                                            class="bi bi-youtube"></i></a>
                                     <a href="https://www.linkedin.com/company/ideal-play-abacus-india-pvt-ltd"><i
-                                            class="fa-brands fa-linkedin"></i></a>
+                                            class="bi bi-linkedin"></i></a>
                                 </div>
                             </div>
                         </div>
@@ -227,7 +230,7 @@
                 </div>
             </div>
             <div class="container py-2">
-                <div class="d-flex d-md-flex d-lg-none justify-content-between align-items-center w-100 p-3">
+                <div class="d-flex d-md-flex d-xl-none justify-content-between align-items-center w-100 p-3">
                     <img class="w-75" src="https://www.playabacusindia.com/images/logo.jpg"
                         alt="Abacus class and Franchises">
                     <button class="navbar-toggler" type="button" data-bs-toggle="offcanvas"
@@ -297,7 +300,7 @@
                                 class="fa-solid fa-exclamation fa-bounce text-warning"></i>
                         </a>
                         <div
-                            class="d-flex d-md-flex d-lg-none justify-content-center align-items-start flex-column w-100 gap-4 my-5">
+                            class="d-flex d-md-flex d-xl-none justify-content-center align-items-start flex-column w-100 gap-4 my-5">
                             <div class="d-flex justify-content-center align-items-start flex-column text-white">
                                 <p class="m-0">MAIL</p>
                                 <a href="mailto:contact@playabacusindia.com"
@@ -308,7 +311,7 @@
                                 <a href="tel:919940416989" class="text-white">+91 99404 16989</a>
                             </div>
                         </div>
-                        <div class="d-flex d-md-flex d-lg-none align-items-start w-100 h-100 flex-column ">
+                        <div class="d-flex d-md-flex d-xl-none align-items-start w-100 h-100 flex-column ">
                             <h3 class="text-white">Follow Us</h3>
                             <div class="d-flex justify-content-center align-items-center gap-4 social-icon">
                                 <a href="https://www.facebook.com/idealplayabacusindiapvtltd/"><i
