about us section have been completed ..

--- a/index.html
+++ b/index.html
@@ -493,39 +493,41 @@
                 </div>
             </div>
         </section>
-        <!-- about us -->
-        <section class="container-fluid my-5 pb-5">
+        <section id="about-us" class="container-fluid my-5 pb-5">
             <div class="container pt-5 pt-md-5 pt-lg-0">
-                <div class="row g-5">
+                <div class="row g-5 align-items-center">
                     <div class="col-12 col-md-12 col-lg-5">
-                        <div class="d-flex justify-content-start align-items-center w-100 ">
+                        <div class="about-video-wrapper w-100">
                             <div class="youtube-container"
-                                style="position:relative;width:510px;height:287px;cursor:pointer;">
+                                style="position:relative;width:100%;aspect-ratio:16/9;cursor:pointer;">
                                 <img src="https://img.youtube.com/vi/MRQ8W0yrcOI/hqdefault.jpg"
                                     alt="Ideal Play Abacus India - 23 Years of Excellence"
-                                    style="width:100%;height:100%;object-fit:cover;">
-                                <a target="_blank" href="https://youtu.be/XvV8f_1mJIQ"
-                                    style="aspect-ratio: 1/1; position:absolute;top:50%;left:50%;transform:translate(-50%,-50%); font-size: 50px;">
-                                    ▶</a>
+                                    style="width:100%;height:100%;object-fit:cover;border-radius:15px;">
+                                <a target="_blank" href="https://youtu.be/XvV8f_1mJIQ" class="video-play-btn">
+                                    <i class="bi bi-play-fill"></i>
+                                </a>
+                            </div>
+                            <div class="experience-badge">
+                                <span class="number">23</span>
+                                <span class="text">Years of<br>Excellence</span>
                             </div>
                         </div>
                     </div>
                     <div class="col-12 col-md-12 col-lg-7">
                         <div class="d-flex justify-content-center align-items-start flex-column w-100 h-100">
-                            <h6>ABOUT US​</h6>
-                            <h2 class="learn-t">Ideal Play Abacus India Private Limited</h2>
-                            <p>(IPA) was founded in 2003 to build brain and math skills in children
-                                using the abacus. Today, we offer abacus maths,
-                                abacus mastermind, and childs abacus programs across
-                                India and abroad. With over 1500+ centers and 4,00,000+ students, we’re a top choice for
-                                those searching abacus near me and abacus franchise
-                                opportunities in India.
+                            <h6 class="about-sub-t">ABOUT US​</h6>
+                            <h2 class="learn-t mb-4">Ideal Play Abacus India Private Limited</h2>
+                            <p class="about-p"><strong>Ideal Play Abacus India (IPA)</strong> was founded in 2003 with a
+                                vision to revolutionize brain and math skills in children using the power of the abacus.
                             </p>
-                            <a href="about-us.html"
-                                class="d-flex justify-content-between align-items-center gap-3 w-100 mt-3">
-                                <h6 class="w-50 m-0 theme-btn-3">KNOW MORE <i class="fa-solid fa-circle-play ms-3"></i>
-                                </h6>
-                                <hr class="border border-dark border-1 opacity-25 w-100 m-0">
+                            <p class="about-p">Today, we are proud to be a global leader in skill-based education,
+                                offering specialized programs like <strong>Abacus Maths, Abacus Mastermind, and Arka
+                                    Kids</strong>. With a vast network of <strong>1500+ centers</strong> and over
+                                <strong>4,00,000 students</strong> trained, we continue to shape young minds across
+                                India and abroad.</p>
+
+                            <a href="about-us.html" class="theme-btn-2 mt-4" role="button">
+                                <span class="text">KNOW MORE</span>
                             </a>
                         </div>
                     </div>
@@ -913,22 +915,24 @@
                     </div>
                     <div class="col-12 col-md-6 col-lg-4">
                         <div
-                            class="d-flex justify-content-start align-items-start flex-column w-100 h-100 competition-main-box">
+                            class="d-flex justify-content-start align-items-start flex-column w-100 h-100 competition-main-box featured-event">
                             <img class="w-100" src="images/competition-events/2.jpg" alt="Abacus class and Franchises">
                             <div class="competition-box p-3">
-                                <h6>NATIONAL LEVEL COMPETITION</h6>
+                                <h6>21ST NATIONAL LEVEL ABACUS & MENTAL ARITHMETIC ONLINE COMPETITION - 2026</h6>
                                 <hr class="border border-warning border-1 opacity-100">
-                                <p class="m-0">20TH NATIONAL LEVEL ABACUS AND MENTAL ARTHIMETIC</p>
+                                <p class="m-0">Join India's premier online abacus championship. Showcase your mental
+                                    math skills and compete with students nationwide for the ultimate title!</p>
                             </div>
                             <div class="d-flex justify-content-end align-items-start w-100 p-3 mt-auto">
                                 <a href="events.html"
                                     class="d-flex justify-content-between align-items-center gap-3 w-100">
-                                    <h6 class="w-50 m-0 theme-btn-3">VIEW MORE <i
+                                    <h6 class="w-50 m-0 theme-btn-3">REGISTER NOW <i
                                             class="fa-solid fa-circle-play ms-3"></i>
                                     </h6>
                                 </a>
                             </div>
-                            <div class="comp-year">2025</div>
+                            <div class="comp-year">2026</div>
+                            <span class="featured-badge">FEATURED</span>
                         </div>
                     </div>
                     <div class="col-12 col-md-6 col-lg-4">
