--- a/index.html
+++ b/index.html
@@ -747,7 +747,7 @@
                         <div class="d-flex justify-content-start align-items-center w-100 h-100 why-box flex-column text-center"
                             style="--why-icon-box-clr: #2d97eb">
                             <div class="d-flex justify-content-center align-items-center why-box-icon">
-                                <i class="fa-solid fa-check fa-2x"></i>
+                                <i class="bi bi-shield-check"></i>
                             </div>
                             <h5 class="pt-4 mb-2">Trusted in India</h5>
                             <p class="m-0">Widely trusted abacus training provider across Indian cities
@@ -758,7 +758,7 @@
                         <div class="d-flex justify-content-start align-items-center w-100 h-100 why-box flex-column text-center"
                             style="--why-icon-box-clr: #17a43b">
                             <div class="d-flex justify-content-center align-items-center why-box-icon">
-                                <i class="fa-solid fa-check fa-2x"></i>
+                                <i class="bi bi-people-fill"></i>
                             </div>
                             <h5 class="pt-4 mb-2">Expert Trainers</h5>
                             <p class="m-0">Certified and experienced abacus and Vedic
@@ -772,7 +772,7 @@
                         <div class="d-flex justify-content-start align-items-center w-100 h-100 why-box flex-column text-center"
                             style="--why-icon-box-clr: #f99300">
                             <div class="d-flex justify-content-center align-items-center why-box-icon">
-                                <i class="fa-solid fa-check fa-2x"></i>
+                                <i class="bi bi-laptop"></i>
                             </div>
                             <h5 class="pt-4 mb-2">Online & Offline Options</h5>
                             <p class="m-0">Learn with flexible online and offline abacus maths classes
@@ -783,7 +783,7 @@
                         <div class="d-flex justify-content-start align-items-center w-100 h-100 why-box flex-column text-center"
                             style="--why-icon-box-clr: #fb9300">
                             <div class="d-flex justify-content-center align-items-center why-box-icon">
-                                <i class="fa-solid fa-check fa-2x"></i>
+                                <i class="bi bi-currency-rupee"></i>
                             </div>
                             <h5 class="pt-4 mb-2">Affordable Fees</h5>
                             <p class="m-0">Low-cost abacus courses and low investment franchise
@@ -794,7 +794,7 @@
                         <div class="d-flex justify-content-start align-items-center w-100 h-100 why-box flex-column text-center"
                             style="--why-icon-box-clr: #2c96ec">
                             <div class="d-flex justify-content-center align-items-center why-box-icon">
-                                <i class="fa-solid fa-check fa-2x"></i>
+                                <i class="bi bi-graph-up-arrow"></i>
                             </div>
                             <h5 class="pt-4 mb-2">Proven Results</h5>
                             <p class="m-0">Our abacus mathematics programs in India boost accuracy,
@@ -805,7 +805,7 @@
                         <div class="d-flex justify-content-start align-items-center w-100 h-100 why-box flex-column text-center"
                             style="--why-icon-box-clr: #17a43b">
                             <div class="d-flex justify-content-center align-items-center why-box-icon">
-                                <i class="fa-solid fa-check fa-2x"></i>
+                                <i class="bi bi-star-fill"></i>
                             </div>
                             <h5 class="pt-4 mb-2">High Demand Skills</h5>
                             <p class="m-0">Abacus and Vedic math are among India’s
@@ -835,23 +835,25 @@
                     <div class="col-12 col-md-12 col-lg-6">
                         <div class="row shadow p-3 learn-row rounded-3 h-100">
                             <div class="col-12 col-md-7 col-lg-7 mb-5 mb-md-5 mb-lg-0">
-                                <div class="d-flex justify-content-center align-items-start flex-column w-100 h-100 ">
+                                <div
+                                    class="d-flex justify-content-center align-items-start flex-column w-100 h-100 ps-md-3">
                                     <div class="learn-box-content">
-                                        <h4>BECOME A PARTNER?</h4>
-                                        <p>Join our dream team today!</p>
-                                        <hr class="border border-warning border-1 opacity-100">
-                                        <p class="m-0">If you love kids and have a passion for education, here’s your
+                                        <div class="d-flex align-items-center mb-3">
+                                            <i class="bi bi-person-plus-fill me-3 fs-2 text-primary"></i>
+                                            <h4 class="m-0 text-dark fw-bold">BECOME A PARTNER?</h4>
+                                        </div>
+                                        <p class="fw-bold text-success">Join our dream team today!</p>
+                                        <hr class="border-primary border-2 opacity-25 w-25">
+                                        <p class="m-0 text-muted">If you love kids and have a passion for education,
+                                            here’s your
                                             chance to start abacus franchise in India. Partner with one
-                                            of the pioneers in abacus education and help create an
-                                            intellectual society through our trusted abacus franchise
-                                            business.</p>
-
+                                            of the pioneers.</p>
                                     </div>
-                                    <a href="#chat-box" onclick="msgBox()" id="chat-box"
-                                        class="d-flex justify-content-start align-items-end gap-3 w-100 mt-5">
-                                        <h6 class="w-50 m-0 theme-btn-3">KNOW MORE <i
-                                                class="fa-solid fa-circle-play ms-3"></i></h6>
-                                    </a>
+                                    <div class="mt-4">
+                                        <a href="#chat-box" onclick="msgBox()" class="theme-btn-3">
+                                            <span>JOIN NOW</span>
+                                        </a>
+                                    </div>
                                 </div>
                             </div>
                             <div class="col-12 col-md-5 col-lg-5">
@@ -865,22 +867,25 @@
                     <div class="col-12 col-md-12 col-lg-6">
                         <div class="row shadow p-3 learn-row rounded-3 h-100">
                             <div class="col-12 col-md-7 col-lg-7 mb-5 mb-md-5 mb-lg-0">
-                                <div class="d-flex justify-content-center align-items-start flex-column w-100 h-100 ">
+                                <div
+                                    class="d-flex justify-content-center align-items-start flex-column w-100 h-100 ps-md-3">
                                     <div class="learn-box-content">
-                                        <h4>BECOME A COURSE INSTRUCTOR</h4>
-                                        <p>Start your teaching career with IPA!</p>
-                                        <hr class="border border-warning border-1 opacity-100">
-                                        <p class="m-0">Join as a certified abacus instructor and play a
-                                            key role in shaping young minds. Our instructors are trained in
-                                            abacus maths, abacus mastermind, and
-                                            abacus Global programs, offering a structured learning path.
-                                        </p>
+                                        <div class="d-flex align-items-center mb-3">
+                                            <i class="bi bi-mortarboard-fill me-3 fs-3 text-primary"></i>
+                                            <h4 class="m-0 text-dark fw-bold">BECOME A TEACHER?</h4>
+                                        </div>
+                                        <p class="fw-bold text-success">Grow with the best educators!</p>
+                                        <hr class="border-primary border-2 opacity-25 w-25">
+                                        <p class="m-0 text-muted">Are you an aspiring educator looking for abacus and
+                                            Vedic math
+                                            teaching opportunities? Join our platform and become a
+                                            certified teacher today.</p>
                                     </div>
-                                    <a href="#chat-box" onclick="msgBox()" id="chat-box"
-                                        class="d-flex justify-content-start align-items-end gap-3 w-100 mt-5">
-                                        <h6 class="w-50 m-0 theme-btn-3">KNOW MORE <i
-                                                class="fa-solid fa-circle-play ms-3"></i></h6>
-                                    </a>
+                                    <div class="mt-4">
+                                        <a href="#chat-box" onclick="msgBox()" class="theme-btn-3">
+                                            <span>GET STARTED</span>
+                                        </a>
+                                    </div>
                                 </div>
                             </div>
                             <div class="col-12 col-md-5 col-lg-5">
